# sfdf

./: pyproject.toml
sfdf/: __init__.py  core.py  expr.py
tests/: test_sfdf.py  test_sfdf_001.py  test_sfdf_002.py  test_sfdf_003.py  test_sfdf_004.py  test_sfdf_005.py  test_sfdf_006.py  test_sfdf_007.py
